fixed docker but daphne

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,11 @@
-FROM python:3.9
+FROM python:3.12
 WORKDIR /app
-COPY requirements.txt .
-RUN pip install -r requirements.txt --no-cache-dir
+COPY README.md pyproject.toml poetry.lock ./
+RUN apt-get update \
+    && apt-get -y install libpq-dev gcc \
+    && pip install poetry \
+    && poetry env use 3.12 \
+    && poetry config virtualenvs.create false \
+    && poetry install
 COPY . .
-CMD ["gunicorn", "--bind", "0.0.0.0:8000", "backend.wsgi"]
+CMD ["poetry", "run", "gunicorn", "--bind", "0.0.0.0:8000", "backend.wsgi"]
