--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3'
+
 services:
   db:
     image: postgres:13
@@ -9,7 +11,7 @@ services:
   backend:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: backend/Dockerfile
     env_file:
       - .env
     restart: always
@@ -20,6 +22,22 @@ services:
       - db
     ports:
       - "8000:8000"
+  frontend:
+    env_file: .env
+    build: ./frontend/
+    command: cp -r /app/build/. /static/
+    volumes:
+      - static:/static
+
+  nginx:
+    image: nginx:1.21.3-alpine
+    ports:
+      - "80:80"
+    volumes:
+      - static:/static/
+      - media:/media/
+    depends_on:
+      - backend
 
   daphne:
     build:
@@ -33,17 +51,6 @@ services:
     ports:
       - "8001:8001"
 
-  nginx:
-    image: nginx:1.21.3-alpine
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - static:/static/
-      - media:/media/
-    depends_on:
-      - backend
-
   redis:
     image: redis
     container_name: redis
@@ -54,3 +61,9 @@ services:
     restart: always
     depends_on:
       - db
+
+volumes:
+  static:
+  media:
+  backend:
+  pg_data:
