--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,11 +5,11 @@ server {
   
   location /api/ {
     proxy_set_header Host $http_host;
-    proxy_pass http://backend:9000/api/;
+    proxy_pass http://backend:8000/api/;
   }
   location /admin/ {
     proxy_set_header Host $http_host;
-    proxy_pass http://backend:9000/admin/;
+    proxy_pass http://backend:8000/admin/;
   }
   
   location /media/ { 
@@ -19,4 +19,12 @@ server {
   location / {
     alias /static/;
   }
+
+  location /ws/ {
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+    proxy_set_header Host $host;
+    proxy_pass http://daphne:8001;
+    }
 }
