--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ python-dotenv = "^1.0.1"
 django-cors-headers = "^4.3.1"
 drf-yasg = "^1.21.7"
 channels = "^4.0.0"
+social-auth-app-django = "^4.0.0"
+PyJWT = "^1.7.1"
+rest-framework-simplejwt = "^0.0.2"
 
 
 [build-system]
