--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
     "babel-loader": "^9.1.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "next": "^14.1.0",
@@ -21,6 +22,7 @@
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "shadcn-ui": "^0.8.0",
+    "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4",
     "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.4"
@@ -28,8 +30,7 @@
   "scripts": {
     "start": "react-scripts start",
     "eject": "react-scripts eject",
-    "dev": "webpack --mode development ./frontend/src/index.js --output ./frontend/static/frontend/main.js",
-    "build": "webpack --config webpack.config.js"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
