--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,36 +1,24 @@
 {
-  "name": "frontendd",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
-    "@babel/preset-react": "^7.23.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
-    "babel-loader": "^9.1.3",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "next": "^14.1.0",
-    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
-    "react-scripts": "^5.0.1",
-    "react-use-websocket": "^4.5.0",
+    "react-scripts": "5.0.1",
     "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0",
-    "shadcn-ui": "^0.8.0",
-    "socket.io": "^4.7.4",
-    "socket.io-client": "^4.7.4",
-    "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "eject": "react-scripts eject",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -50,7 +38,6 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "webpack-cli": "^5.1.4"
-  }
+  "main": "index.js",
+  "license": "MIT"
 }
